--- a/Week-1/Assignment2/index.html
+++ b/Week-1/Assignment2/index.html
@@ -10,7 +10,12 @@
   </header>
   <main>
     <!-- creating the links for the pages here -->
-    <ul><a href="PoemPage.html" target="_blank">Poem Page</a></ul>
+    <ol><li><a href="PoemPage.html" target="_blank">Poem Page</a></li>
+      <li><a href="HomeTown.html" target="_blank">Home Town</a></li>
+      <li><a href="FavoriteMusicianFanPage.html" target="_blank">Favorite Musician</a></li>
+      <li><a href="Tables.html" target="_blank">Tabels</a></li>
+      <li><a href="informatin.html" target="_blank">Form</a></li>
+    </ol>
   </main>
   <footer>
     <p>Copyright &copy; 2023</p>
