week-1 final changes

--- a/Week-1/Assignment2/FavoriteMusicianFanPage.html
+++ b/Week-1/Assignment2/FavoriteMusicianFanPage.html
@@ -9,7 +9,15 @@
     <h1>Eminem Fan WebPage</h1>
   </header>
   <main>  
-    <p><b>About Eminem in four lines</b></p>
+    <pre> 
+        About Eminem in four lines
+            He's the Rap God, the real Slim Shady,
+            He's got bars that will blow your mind away.
+            He's a legend, a pioneer,
+            He's Eminem, and he's here to stay.
+    </pre>
+    <p><b>
+        About Eminem in four lines</b></p>
     <p> He's the Rap God, the real Slim Shady,</br>
         He's got bars that will blow your mind away.</br>
         He's a legend, a pioneer,</br>
