--- a/Week-1/Assignment2/index.html
+++ b/Week-1/Assignment2/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Index page</title>
 </head>
+
 <body>
   <header>
     <h1>click on below to navigate between pages</h1>
   </header>
   <main>
     <!-- creating the links for the pages here -->
-    <ol><li><a href="PoemPage.html" target="_blank">Poem Page</a></li>
+    <ol>
+      <li><a href="PoemPage.html" target="_blank">Poem Page</a></li>
       <li><a href="HomeTown.html" target="_blank">Home Town</a></li>
       <li><a href="FavoriteMusicianFanPage.html" target="_blank">Favorite Musician</a></li>
       <li><a href="Tables.html" target="_blank">Tabels</a></li>
@@ -21,4 +24,5 @@
     <p>Copyright &copy; 2023</p>
   </footer>
 </body>
+
 </html>
