--- a/Week-1/Assignment2/informatin.html
+++ b/Week-1/Assignment2/informatin.html
@@ -10,31 +10,31 @@
   </header>
   <main>
    <form method="post" enctype="multipart/form-data">
-    <dev>
+    <div>
     <label for="fullName">Full Name:</label>
     
     <input id="fullName" required type="text"/>
-    </dev>
+    </div>
 <br/>
-   <dev>
+   <div>
     <label>Email Id:</label>
 
     <input form="about" id="emilId" required type="text"/>
-    </dev>
+    </div>
     <br/>
-    <dev>
+    <div>
     <label>About:</label>
     <textarea  id="about" rows="3" cols="50"></textarea>
-</dev>
+</div>
 <br/>
-<dev>
+<div>
     <label for="Profile">Profile</label>
     <input id="Profile" type="file" value="image"/>
-</dev>
+</div>
 <br/>
-<dev>
+<div>
     <input type="submit"/>
-</dev>
+</div>
    </form>
   </main>
   <footer>
